# funtools

./: Cargo.toml  README.md
src/: fibonacci.rs  leonardo.rs  lib.rs  lucas.rs  prime.rs  tribonacci.rs
tests/: fibonacci_test.rs  leonardo_test.rs  lucas_test.rs  prime_test.rs  tribonacci_test.rs
